# api-gateway

./: .dockerignore  .gitignore  Makefile  README.md  pyproject.toml  requirements.git.txt  requirements.test.txt  requirements.txt
client/: main.py
deploy/: Dockerfile  docker-compose.yml  testing.docker-compose.yml
deploy/tests/: docker-compose.yml
scripts/: start.sh
src/asmanqueue/tasks/: __init__.py  wildcard_domain.py
src/background/: __init__.py  app.py  config.py  requirements.txt
src/gateway/: app.py  requirements.txt
src/gateway/apps/: __init__.py  api.py
src/gateway/core/: configs.py  types.py
src/gateway/middlewares/: __init__.py  admin.py  auth.py  exception.py  logger.py
src/gateway/routers/: __init__.py  assets.py  auth.py  bbprogram.py  dev_checks.py  example.py  program.py  programs.py  settings.py
src/gateway/tests/: conftest.py  conftest_clients.py  conftest_config.py  test_bbprogram.py  test_dev_checks.py  test_example.py  test_facebook_ctlog.py  test_facebook_webhook.py
src/gateway/web/: __init__.py  app.py
src/queue/: README.md  asmanhood.py
src/queue/core/: configs.py
src/queue/models/: domain.py
src/queue/tasks/: hello.py
terraform/: .gitignore  Makefile  README.md  cloud-init.tf  dns.tf  main.tf  network.tf  output.tf  secrets.tfvars.tpl  terraform.tfvars  variables.tf
terraform/certificate/: .gitignore  Makefile  README.md  main.tf  output.tf  terraform.tf  terraform.tfvars  variables.tf
terraform/configs/: cloud-init.tpl.yaml  tpl.docker-compose.yaml
terraform/vm-instance/: main.tf  output.tf  variables.tf
(+19 files in other folders)
